--- a/src/pages/Bookmarks.module.css
+++ b/src/pages/Bookmarks.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   margin: 42px auto auto 46px;
+  overflow: hidden;
 }
 
 .bookmark-icon {
@@ -14,5 +15,5 @@
 }
 
 .main-box {
-  margin: 0 64px 64px 380px;
+  margin: 0 64px 64px 404px;
 }
